Fix rounding on iOS input box

--- a/src/components/ShoppingList/styles.module.css
+++ b/src/components/ShoppingList/styles.module.css
@@ -28,6 +28,7 @@
     font-weight: 700;
     flex-grow: 1;
     margin-right: 20px;
+    border-radius: 0;
 }
 
 .newItem input:focus {
